src/test/ui/inner-static-type-parameter.stderr
error[E0401]: can't use generic parameters in `static` associated item
  --> $DIR/inner-static-type-parameter.rs:6:19
   |
LL | fn foo<T>() {
   |        - type parameter being used
LL |     static a: Bar<T> = Bar::What;
   |                   ^ use of generic parameter in `static` associated item
   |
   = help: `static` associated item need a type instead of a generic parameter

error[E0392]: parameter `T` is never used
  --> $DIR/inner-static-type-parameter.rs:3:10
   |
LL | enum Bar<T> { What }
   |          ^ unused parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0392, E0401.
For more information about an error, try `rustc --explain E0392`.
